--- a/assets/css/html1.css
+++ b/assets/css/html1.css
@@ -9,6 +9,8 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    overflow-x: hidden; /* Evita la barra de desplazamiento horizontal */
+
 }
 
 header {
@@ -16,6 +18,8 @@ header {
     color: #e4e0e0;
     text-align: center;
     padding: 10px 0;
+    margin: 0;
+    padding: 0;
 }
 
 main {
