--- a/assets/css/style2.3.css
+++ b/assets/css/style2.3.css
@@ -1,8 +1,8 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: Arial, sans-serif;
-    background-color: #e4e0e0;
+    font-family: 'Arial', sans-serif;
+    background-color: #a56c45;
 }
 
 .container {
@@ -13,23 +13,55 @@ body {
     height: 100vh;
 }
 
+h1 {
+    margin-top: 20px;
+    color: #333;
+    font-size: 36px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    text-shadow: 2px 2px 2px rgba(0,0,0,0.1);
+}
+
 .collage {
     display: flex;
     flex-wrap: wrap;
-    gap: 10px;
+    justify-content: center;
+    gap: 20px;
 }
 
-.image {
-    max-width: calc(19% - 10px);
-    transition: opacity 0.3s ease;
+.item {
+    width: 200px;
+    padding: 10px;
+    background-color: #fff;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+    transition: transform 0.3s ease;
 }
 
-.image:hover {
-    opacity: 0.8;
+.item:hover {
+    transform: scale(1.05);
 }
 
-.collection-name {
+.item img {
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+}
+
+.item p {
     margin-top: 10px;
-    font-size: 10px;
-    font-weight: bold;
+    text-align: center;
+    color: #666;
+    font-size: 14px;
+}
+
+@media (max-width: 768px) {
+    .collage {
+        justify-content: flex-start;
+    }
+
+    .item {
+        width: calc(33.33% - 20px);
+    }
 }
