--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -2,7 +2,20 @@ body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    background-color: #e4e0e0;
+    overflow-x: hidden;
+    background: linear-gradient(to bottom, #835016, #df9d46dc); /* Colores de fondo */
+    position: relative;
+    
+}
+body::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(to bottom, rgba(95, 40, 14, 0.733), rgba(255, 255, 255, 0.219)); /* Efecto reflectante */
+    pointer-events: none; /* Permite hacer clics a través del elemento */
 }
 
 .container {
@@ -32,7 +45,7 @@ h1 {
 }
 
 h2 {
-    color: #b9866a;
+    color: #000000;
     
 }
 
@@ -75,3 +88,20 @@ h2 {
 }
 
 
+button#finalButton {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    padding: 10px 20px;
+    background-color: #69391f;
+    color: #fff;
+    font-size: 16px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+button#finalButton:hover {
+    background-color: #b4724f;
+}
