--- a/assets/css/style2.4.css
+++ b/assets/css/style2.4.css
@@ -2,34 +2,47 @@ body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    background-color: #e4e0e0;
-}
-
-.container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-}
-
-.collage {
+    background-color: #c48f53;
+  }
+  
+  .container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px;
+  }
+  
+  .collage {
     display: flex;
     flex-wrap: wrap;
-    gap: 10px;
-}
-
-.image {
-    max-width: calc(19% - 10px);
-    transition: opacity 0.3s ease;
-}
-
-.image:hover {
-    opacity: 0.8;
-}
-
-.collection-name {
-    margin-top: 10px;
-    font-size: 10px;
-    font-weight: bold;
-}
+    justify-content: center;
+    gap: 20px;
+  }
+  
+  .item {
+    width: calc(33.33% - 20px);
+    background-color: #fff;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease-in-out;
+  }
+  
+  .item:hover {
+    transform: scale(1.05);
+  }
+  
+  .item img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 10px 10px 0 0;
+  }
+  
+  .item p {
+    text-align: center;
+    margin: 0;
+    padding: 10px 0;
+    color: #3c3c3c;
+    font-size: 16px;
+  }
+  
